--- a/package.json
+++ b/package.json
@@ -26,26 +26,27 @@
         "url": "https://github.com/BlackrockDigital/startbootstrap-new-age.git"
     },
     "dependencies": {
-        "animate.css": "^3.6.1",
-        "aos": "^2.3.0",
+        "animate.css": "^3.7.0",
+        "aos": "^2.3.3",
         "bootstrap": "4.1.1",
         "chart.js": "^2.7.2",
         "font-awesome": "4.7.0",
-        "gulp-uglify": "^3.0.0",
+        "gulp-uglify": "^3.0.1",
         "jquery": "3.3.1",
         "jquery-parallax.js": "^1.5.0",
         "jquery.easing": "^1.4.1",
         "modaal": "^0.3.1",
         "simple-line-icons": "2.4.1",
         "slick-carousel": "^1.8.1",
-        "sweetalert2": "^7.21.0"
+        "sweetalert2": "^7.26.12"
     },
     "devDependencies": {
         "browser-sync": "2.24.3",
         "gulp": "^3.9.1",
         "gulp-clean-css": "3.9.4",
         "gulp-header": "2.0.5",
-        "gulp-rename": "^1.2.2",
+        "gulp-imagemin": "^4.1.0",
+        "gulp-rename": "^1.4.0",
         "gulp-sass": "4.0.1"
     }
 }
