--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "browser-sync": "2.24.3",
         "gulp": "^3.9.1",
         "gulp-clean-css": "3.9.4",
+        "gulp-concat": "^2.6.1",
         "gulp-header": "2.0.5",
         "gulp-imagemin": "^4.1.0",
         "gulp-rename": "^1.4.0",
